feat(database,config): Add comprehensive database initialization and Kafka configuration
- Update .env.example with detailed Kafka configuration parameters
- Add database initialization script with robust migration and setup logic
- Implement database connection health checks and core table verification
- Create utility functions for database migrations and status tracking
- Add CLI interface for database management commands
- Export base62 encoding utilities in centralized utils module
Enhances project infrastructure by providing comprehensive database management tools and configuration options for Kafka and database connections.

--- a/.env.example
+++ b/.env.example
@@ -38,10 +38,28 @@ LOG_FILE_PATH=logs/app.log
 LOG_MAX_SIZE=10m
 LOG_MAX_FILES=5
 
-# Analytics
+# Kafka Configuration
 KAFKA_BROKERS=localhost:9092
-KAFKA_TOPIC_CLICKS=url_clicks
-KAFKA_CLIENT_ID=url-shortener-api
+KAFKA_CLIENT_ID=url-shortener-service
+KAFKA_CONNECTION_TIMEOUT=3000
+KAFKA_REQUEST_TIMEOUT=30000
+KAFKA_INITIAL_RETRY_TIME=100
+KAFKA_RETRIES=8
+KAFKA_SSL_ENABLED=false
+KAFKA_SASL_MECHANISM=
+KAFKA_SASL_USERNAME=
+KAFKA_SASL_PASSWORD=
+
+# Kafka Topics Configuration
+KAFKA_URL_CLICKS_PARTITIONS=6
+KAFKA_REPLICATION_FACTOR=1
+KAFKA_URL_CLICKS_RETENTION=604800000
+
+# Kafka Consumer Configuration
+KAFKA_SESSION_TIMEOUT=30000
+KAFKA_REBALANCE_TIMEOUT=60000
+KAFKA_HEARTBEAT_INTERVAL=3000
+KAFKA_MAX_BYTES_PER_PARTITION=1048576
 
 # Monitoring
 METRICS_PORT=9090
