--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "db:init": "ts-node src/database/init.ts init",
+    "db:migrate": "ts-node src/database/init.ts migrate",
+    "db:status": "ts-node src/database/init.ts status",
+    "db:create": "ts-node src/database/init.ts create",
+    "kafka:init": "ts-node src/scripts/initKafka.ts",
+    "analytics:aggregator": "ts-node src/scripts/runAnalyticsAggregator.ts",
+    "analytics:batch": "ts-node src/scripts/runBatchAnalytics.ts"
   },
   "keywords": [
     "url-shortener",
@@ -22,6 +29,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -30,8 +39,12 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
+    "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
+    "ua-parser-js": "^1.0.37",
+    "uuid": "^13.0.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
@@ -41,8 +54,10 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/kafkajs": "^1.8.2",
     "@types/node": "^20.9.0",
     "@types/pg": "^8.10.9",
+    "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.54.0",
