feat(services,monitoring): Add comprehensive health monitoring and tracing infrastructure
- Add OpenTelemetry tracing dependencies for distributed tracing
- Enhance health routes with more comprehensive service checks
- Add Jaeger and Zipkin tracing endpoint configurations
- Implement optional Kafka health check in health routes
- Add Prometheus metrics client for system monitoring
- Update .env.example with tracing and monitoring configurations
- Improve readiness and health check routes with detailed service status
- Add system resource tracking in health endpoints
- Implement detailed health checks for database, cache, and Kafka services
Enables advanced observability and monitoring capabilities for the application, providing deeper insights into service health and performance.

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ KAFKA_MAX_BYTES_PER_PARTITION=1048576
 # Monitoring
 METRICS_PORT=9090
 HEALTH_CHECK_TIMEOUT=5000
+
+# Tracing
+JAEGER_ENDPOINT=http://localhost:14268/api/traces
+ZIPKIN_ENDPOINT=http://localhost:9411/api/v2/spans
+TRACING_ENABLED=true
