--- a/package.json
+++ b/package.json
@@ -29,6 +29,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.66.0",
+    "@opentelemetry/exporter-jaeger": "^2.2.0",
+    "@opentelemetry/exporter-zipkin": "^2.2.0",
+    "@opentelemetry/instrumentation-express": "^0.56.0",
+    "@opentelemetry/instrumentation-http": "^0.207.0",
+    "@opentelemetry/instrumentation-kafkajs": "^0.17.0",
+    "@opentelemetry/instrumentation-pg": "^0.60.0",
+    "@opentelemetry/instrumentation-redis": "^0.56.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.207.0",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
@@ -42,6 +53,7 @@
     "kafkajs": "^2.2.4",
     "node-cron": "^4.2.1",
     "pg": "^8.11.3",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.10",
     "ua-parser-js": "^1.0.37",
     "uuid": "^13.0.0",
