--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
