feat(frontend): Enhance URL Shortener Form with advanced configuration options
- Add comprehensive form validation and error handling
- Implement dynamic custom alias and expiry configuration
- Integrate Redux state management for authentication context
- Add permission-based feature toggles for custom alias and expiry
- Improve input handling and user experience with dynamic suggestions
- Refactor component to support optional success callback
- Add AliasAvailabilityChecker component for alias validation
- Enhance input components with more robust type checking
Improves user experience by providing more flexible URL shortening options while maintaining strict access control based on user permissions.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "db:init": "ts-node src/database/init.ts init",
     "db:migrate": "ts-node src/database/init.ts migrate",
+    "db:migrate:users": "ts-node -e \"require('./src/database/init.ts').runMigration('./src/database/migrations/002_create_users_table.sql')\"",
     "db:status": "ts-node src/database/init.ts status",
     "db:create": "ts-node src/database/init.ts create",
     "kafka:init": "ts-node src/scripts/initKafka.ts",
