--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=url_shortener
 DB_USER=postgres
-DB_PASSWORD=password
+DB_PASSWORD=your_password
 DB_POOL_MIN=2
 DB_POOL_MAX=10
 DB_CONNECTION_TIMEOUT=30000
@@ -19,13 +19,13 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
-REDIS_CLUSTER_NODES=localhost:7000,localhost:7001,localhost:7002
 REDIS_MAX_RETRIES=3
 REDIS_RETRY_DELAY=100
 
-# Security
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-API_KEY_SECRET=your-api-key-secret-change-this-in-production
+# Security (Generate strong secrets in production)
+JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
+JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-at-least-32-characters-long
+API_KEY_SECRET=your-super-secret-api-key-at-least-32-characters-long
 BCRYPT_ROUNDS=12
 
 # Rate Limiting
@@ -38,34 +38,19 @@ LOG_FILE_PATH=logs/app.log
 LOG_MAX_SIZE=10m
 LOG_MAX_FILES=5
 
-# Kafka Configuration
+# Analytics (Optional)
 KAFKA_BROKERS=localhost:9092
-KAFKA_CLIENT_ID=url-shortener-service
-KAFKA_CONNECTION_TIMEOUT=3000
-KAFKA_REQUEST_TIMEOUT=30000
-KAFKA_INITIAL_RETRY_TIME=100
-KAFKA_RETRIES=8
-KAFKA_SSL_ENABLED=false
-KAFKA_SASL_MECHANISM=
-KAFKA_SASL_USERNAME=
-KAFKA_SASL_PASSWORD=
-
-# Kafka Topics Configuration
-KAFKA_URL_CLICKS_PARTITIONS=6
-KAFKA_REPLICATION_FACTOR=1
-KAFKA_URL_CLICKS_RETENTION=604800000
-
-# Kafka Consumer Configuration
-KAFKA_SESSION_TIMEOUT=30000
-KAFKA_REBALANCE_TIMEOUT=60000
-KAFKA_HEARTBEAT_INTERVAL=3000
-KAFKA_MAX_BYTES_PER_PARTITION=1048576
+KAFKA_TOPIC_CLICKS=url_clicks
+KAFKA_CLIENT_ID=url-shortener-api
 
 # Monitoring
 METRICS_PORT=9090
 HEALTH_CHECK_TIMEOUT=5000
 
-# Tracing
+# Tracing (Optional)
 JAEGER_ENDPOINT=http://localhost:14268/api/traces
 ZIPKIN_ENDPOINT=http://localhost:9411/api/v2/spans
 TRACING_ENABLED=true
+
+# CORS (Production)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
