--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.207.0",
     "@types/node-cron": "^3.0.11",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
@@ -56,6 +57,7 @@
     "pg": "^8.11.3",
     "prom-client": "^15.1.3",
     "redis": "^4.6.10",
+    "socket.io": "^4.8.1",
     "ua-parser-js": "^1.0.37",
     "uuid": "^13.0.0",
     "winston": "^3.18.3"
