feat(components,config): Enhance WebSocket status and environment configuration
- Add cache control configuration in .env files
- Update index.html with cache control meta tags
- Refactor WebSocketStatus component with improved dark mode support
- Add new PageHeader component for consistent page layout
- Improve WebSocket connection status handling and UI
- Add support for dynamic cache control based on environment
- Enhance component responsiveness and accessibility

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,12 @@
 # Production Backend API Configuration
 # Update this URL to match your production backend
-VITE_BASE_URL=https://api.yourapp.com
+# Backend API Configuration
+VITE_BASE_URL=http://localhost:3000/api/v1
+VITE_REDIRECT_BASE_URL=http://localhost:3000
+VITE_QR_CODE_GENERATER_URL=https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=
+
+# WebSocket Configuration
+VITE_WS_URL=http://localhost:3000
+
+# Cache Control (enable caching in production)
+VITE_ENABLE_CACHE=true
