--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,9 @@
 # Backend API Configuration
 VITE_BASE_URL=http://localhost:3000
 
+# Cache Control (set to true in production, false in development)
+VITE_ENABLE_CACHE=false
+
 # Other environment variables can be added here
 # VITE_APP_NAME=ShortLink
 # VITE_APP_VERSION=1.0.0
