--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
