--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,12 +1,18 @@
 # Production Backend API Configuration
-# Update this URL to match your production backend
-# Backend API Configuration
-VITE_BASE_URL=http://localhost:3000/api/v1
-VITE_REDIRECT_BASE_URL=http://localhost:3000
+# Update these URLs to match your production backend domain
+VITE_BASE_URL=https://api.yourdomain.com/api/v1
+VITE_REDIRECT_BASE_URL=https://yourdomain.com
 VITE_QR_CODE_GENERATER_URL=https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=
 
 # WebSocket Configuration
-VITE_WS_URL=http://localhost:3000
+VITE_WS_URL=wss://api.yourdomain.com
 
 # Cache Control (enable caching in production)
 VITE_ENABLE_CACHE=true
+
+# Application Configuration
+VITE_APP_NAME=ShortLink
+VITE_APP_VERSION=1.0.0
+
+# Environment
+NODE_ENV=production
