chore(deployment): Optimize Render Deployment Configuration and Documentation
- Update RENDER_DEPLOYMENT.md with more precise deployment instructions
- Replace `npm install` with `npm ci` for more consistent builds
- Add clarification about root directory configuration
- Enhance troubleshooting section with specific error scenarios
- Update render.yaml to include explicit `rootDir` configuration
- Improve documentation for resolving module not found errors
Ensures more reliable and clear deployment process for Render platform

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npm run build
+    rootDir: .
+    buildCommand: npm ci && npm run build
     startCommand: node dist/server.js
     envVars:
       - key: NODE_ENV
