chore(deployment,config): Enhance Render Deployment and Environment Configuration
- Update RENDER_DEPLOYMENT.md with comprehensive deployment instructions
- Modify environment configuration to default to '0.0.0.0' in production
- Remove unnecessary console log in app.ts
- Refactor environment variable setup for better deployment compatibility
- Add detailed environment variable guidance for Render deployment
- Improve build and start commands for optimal deployment process

--- a/render.yaml
+++ b/render.yaml
@@ -5,10 +5,5 @@ services:
     region: oregon
     plan: free
     rootDir: .
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install --include=dev && npm run build && npm prune --production
     startCommand: node dist/server.js
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: PORT
-        value: 3000
