chore(deployment,config): Enhance Render and Environment Configuration for Production
- Update render.yaml to include explicit NODE_ENV and HOST environment variables
- Modify environment configuration to handle HOST variable more flexibly
- Ensure proper configuration for production deployment on Render
- Improve environment variable handling and default settings
- Enhance server configuration for better cross-environment compatibility

--- a/render.yaml
+++ b/render.yaml
@@ -7,3 +7,8 @@ services:
     rootDir: .
     buildCommand: npm install --include=dev && npm run build && npm prune --production
     startCommand: node dist/server.js
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: HOST
+        value: 0.0.0.0
