chore(deployment,config): Enhance Environment Configuration for Production Deployment
- Update .env.example with production-ready configuration templates
- Add Vercel configuration files for frontend and backend routing
- Modify environment variables to support secure, scalable deployment
- Set default tracing and health check settings for production environment
- Improve database, Redis, and security configuration placeholders
- Update CORS and allowed origins configuration
- Standardize environment variable naming and structure

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,33 @@
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
-HOST=localhost
+HOST=0.0.0.0
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=your-database-host.com
 DB_PORT=5432
-DB_NAME=url_shortener
-DB_USER=postgres
-DB_PASSWORD=your_password
+DB_NAME=your_database_name
+DB_USER=your_database_user
+DB_PASSWORD=your_database_password
 DB_POOL_MIN=2
 DB_POOL_MAX=10
 DB_CONNECTION_TIMEOUT=30000
 DB_IDLE_TIMEOUT=30000
+# For SSL certificate, either set DB_SSL_CA or place ca.pem file in root
+DB_SSL_CA=
 
 # Redis Configuration
-REDIS_HOST=localhost
+REDIS_HOST=your-redis-host.com
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=your_redis_password
 REDIS_DB=0
 REDIS_MAX_RETRIES=3
 REDIS_RETRY_DELAY=100
 
 # Security (Generate strong secrets in production)
-JWT_SECRET=your-super-secret-jwt-key-at-least-32-characters-long
-JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-at-least-32-characters-long
-API_KEY_SECRET=your-super-secret-api-key-at-least-32-characters-long
+JWT_SECRET=generate-a-strong-secret-at-least-32-characters-long
+JWT_REFRESH_SECRET=generate-a-strong-refresh-secret-at-least-32-characters-long
+API_KEY_SECRET=generate-a-strong-api-key-secret-at-least-32-characters-long
 BCRYPT_ROUNDS=12
 
 # Rate Limiting
@@ -38,7 +40,7 @@ LOG_FILE_PATH=logs/app.log
 LOG_MAX_SIZE=10m
 LOG_MAX_FILES=5
 
-# Analytics (Optional)
+# Analytics (Optional - leave as localhost if not using Kafka)
 KAFKA_BROKERS=localhost:9092
 KAFKA_TOPIC_CLICKS=url_clicks
 KAFKA_CLIENT_ID=url-shortener-api
@@ -50,7 +52,7 @@ HEALTH_CHECK_TIMEOUT=5000
 # Tracing (Optional)
 JAEGER_ENDPOINT=http://localhost:14268/api/traces
 ZIPKIN_ENDPOINT=http://localhost:9411/api/v2/spans
-TRACING_ENABLED=true
+TRACING_ENABLED=false
 
-# CORS (Production)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+# CORS (Production - comma-separated list of allowed origins)
+ALLOWED_ORIGINS=https://your-frontend-domain.com
