--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,6 +4,9 @@ VITE_BASE_URL=http://localhost:3000
 # Cache Control (set to true in production, false in development)
 VITE_ENABLE_CACHE=false
 
+# Skip backend health check (set to true in development, false in production)
+VITE_SKIP_HEALTH_CHECK=true
+
 # Other environment variables can be added here
 # VITE_APP_NAME=ShortLink
 # VITE_APP_VERSION=1.0.0
